# engineering-golden-case

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  iam.tf  pyproject.toml  requirements.txt
.github/workflows/: ci-feature.yml  ci-release.yml
app/src/_cross/notebooks/: get_active_tickers.ipynb
app/src/_cross/utils/: logger.py
app/src/get_b3_active_tickers/domain/dtos/: output_dto.py
app/src/get_b3_active_tickers/domain/entities/: ticker.py
app/src/get_b3_active_tickers/domain/interfaces/: adapters_interface.py  repositories_interface.py
app/src/get_b3_active_tickers/infra/adapters/: fundamentus_adapter.py  requests_adapter.py
app/src/get_b3_active_tickers/infra/repositories/: dynamodb_repository.py
app/src/get_b3_active_tickers/presentation/: save_tickers_info_presentation.py
app/src/get_b3_active_tickers/tests/: conftest.py  test_dynamodb_repository.py  test_fundamentus_adapter.py  test_requests_adapter.py
app/src/get_b3_active_tickers/tests/mocks/: mocked_dynamodb_repository.py  mocked_entity_ticker.py  mocked_fundamentus_adapter.py  mocked_requests_adapter.py
app/src/get_b3_active_tickers/usecases/: save_tickers_info_usecase.py
assets/iam/policy_templates_rendered/: egc-policy-cloudwatch-logs.json
infra/aws/get-active-tickers/: variables.tf
infra/aws/get-b3-active-tickers/: dynamodb.tf  iam.tf  variables.tf
infra/aws/get-b3-active-tickers/iam_assets/policy_templates/: policy-cloudwatch-logs.json
infra/aws/get-b3-active-tickers/iam_assets/policy_templates_rendered/: egc-policy-cloudwatch-logs.json  (+1 more)
(+1 files in other folders)
