[project]
name = "engineering-golden-case"
version = "0.1.0"
description = ""
authors = [
    {name = "Thiago Panini",email = "panini.development@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4 (>=0.0.2,<0.0.3)",
    "pydantic (>=2.10.6,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "boto3 (>=1.36.23,<2.0.0)",
    "lxml (>=5.3.1,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.4"
mypy = "^1.15.0"
pre-commit = "^4.1.0"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
moto = "^5.0.28"
requests-mock = "^1.12.1"
boto3-stubs = "^1.36.23"
types-requests = "^2.32.0.20241016"

